--- a/src/index.css
+++ b/src/index.css
@@ -89,6 +89,12 @@ header h1 {
   margin-bottom: 2rem;
 }
 
+.subTotal {
+  color: var(--blanco);
+  margin: 0.2rem;
+  font-size: 2.2rem;
+}
+
 .formulario input[type="text"],
 .formulario input[type="number"] {
   background-color: var(--gris-claro);
